fix(section-notice): remove spacing on the right for CTA without dismiss button

--- a/packages/skin/src/sass/section-notice/section-notice.scss
+++ b/packages/skin/src/sass/section-notice/section-notice.scss
@@ -46,6 +46,12 @@ span[role="region"].section-notice {
     white-space: nowrap;
 }
 
+/* remove padding and margin from CTA when there's no dismiss button */
+.section-notice:not(:has(.section-notice__dismiss)) .section-notice__cta {
+    margin-right: 0;
+    padding-right: 0;
+}
+
 /* legacy version with separate bold heading */
 .section-notice__title:not(:only-child) {
     font-weight: bold;
@@ -156,6 +162,10 @@ p.section-notice__cta {
 
     .section-notice__footer {
         padding-left: var(--spacing-200);
+    }
+
+    .section-notice__dismiss {
+        text-decoration: none;
     }
 }
 
